<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_select_game">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.dev001hajipro.notorekraepelin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.github.dev001hajipro.notorekraepelin.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.github.dev001hajipro.notorekraepelin.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.github.dev001hajipro.notorekraepelin.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.github.dev001hajipro.notorekraepelin.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.github.dev001hajipro.notorekraepelin.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_select_game"
        android:name="com.github.dev001hajipro.notorekraepelin.ui.game.SelectGameFragment"
        android:label="@string/fragment_select_game"
        tools:layout="@layout/fragment_select_game" >
        <action
            android:id="@+id/action_nav_select_game_to_nav_game"
            app:destination="@id/nav_game" >
            <argument android:defaultValue="60"
                android:name="seconds" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/nav_game"
        android:name="com.github.dev001hajipro.notorekraepelin.ui.game.GameFragment"
        android:label="@string/fragment_game"
        tools:layout="@layout/fragment_game" >
        <action
            android:id="@+id/action_nav_game_to_nav_game_result"
            app:destination="@id/nav_game_result">
        </action>
        <argument
            android:name="seconds"
            app:argType="integer"
            android:defaultValue="60" />
    </fragment>
    <fragment
        android:id="@+id/nav_game_result"
        android:name="com.github.dev001hajipro.notorekraepelin.ui.game.GameResultFragment"
        android:label="@string/fragment_game_result"
        tools:layout="@layout/fragment_game_result" />
</navigation>